se agregaron los modelos

--- a/Plantillas/index.html
+++ b/Plantillas/index.html
@@ -67,6 +67,7 @@
         chart.series[0].setData(data3);
       }*/
 
+      chart.series[0].setData([]);
       
 
       switch (selectedOption) {
@@ -88,6 +89,7 @@
 
 
     </script>
+<script> </script>
   </body>
  <!----------------------------------------------------------------> 
    
