--- a/Plantillas/personascondiscapacidad.html
+++ b/Plantillas/personascondiscapacidad.html
@@ -2,4 +2,9 @@
 {% load  static %}
 {% block content %}
 <h3>Estoy en Personas Con Discapacidad</h3>
+    <script>
+        /*var datos = '{{ datos|safe }}';
+        var datosjson = JSON.parse(datos);*/
+        console.log('{{datos}}')
+    </script>
 {% endblock %}
